# AI-Quest-IITB-Hackathon

./: .env.example  README.md  STRUCTURE.md  requirements.txt
ml/: .env.example  .gitignore  README.md  app.py  data.py  db.sqlite3  pyproject.toml  requirements.txt  scrape.py
ml/ML/: settings.py  urls.py
ml/agents/: agent.py  agent_manager.py  base_agent.py  crew_agents.py  knowledge_graph_agent.py  research_agent.py
ml/api/: agents.py  chat.py  exceptions.py  github.py  main.py  middleware.py
ml/config/: logging.py  neo4j_config.py  settings.py
ml/document_chat/: apps.py  urls.py  views.py
ml/github_integration/: safety.py  urls.py  views.py
ml/graph/: github_rag.py  neo4j_manager.py  wikipedia_rag.py
ml/graph/github/: __init__.py  chat.py  chunking.py  code_analysis.py  code_generation.py  code_style.py  embeddings.py  github_rag.py  knowledge_graph.py  language_analyzers.py  realtime_analysis.py  retrieval.py  search.py  test_generation.py
ml/graph/rag/: graph_rag.py
ml/repo_indices/Asim-Shah-2004/ClassiFI/main/: repo_index.faiss  repo_index_metadata.json
ml/repo_indices/Asim-Shah-2004/SIH/main/: repo_index.faiss  repo_index_metadata.json
ml/repo_indices/Overlord-1/ts-api/main/: repo_index.faiss  (+1 more)
ml/schemas/: agents.py  github.py
ml/scripts/: cleanup.py  dev.py  prod.py  run.py  run_tests.py
ml/services/: __init__.py  agents.py  github.py
ml/smartbot/: apps.py  urls.py  views.py
ml/spam/: urls.py  views.py
ml/tests/: conftest.py  test_main.py
ml/utils/: common.py
ml/wikipedia_scrape/: apps.py  services.py  urls.py  views.py
(+141 files in other folders)
