[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["vvinayakkk <ntpjc2vinayak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
torch = "^2.5.1"
transformers = "^4.47.0"
langchain-google-genai = "^2.0.7"
langchain = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
