[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["vvinayakkk <ntpjc2vinayak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
torch = "^2.5.1"
transformers = "^4.47.0"
langchain-google-genai = "^2.0.7"
langchain = "^0.3.12"
wikipedia = "^1.4.0"
click = "^8.1.7"
sentence-transformers = "^3.3.1"
pinecone-client = "^5.0.1"
neo4j-driver = "^5.27.0"
aiohttp = "^3.11.10"
pymongo = "^4.10.1"
faker = "^33.1.0"
pypdf2 = "^3.0.1"
faiss-cpu = "^1.9.0.post1"
docx = "^0.2.4"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
